<resources>
    <string name="app_name">ForFit</string>
    <string name="challenge_title">Create Challenge</string>
    <string name="challenge_name">Challenge Name: </string>
    <string name="challenge_description">Challenge Description: </string>
    <string name="challenge_exercises">Challenge Exercises: </string>
    <string name="challenge_difficulty">Challenge Difficulty: </string>
    <string name="challenge_duration">Challenge Duration: </string>
    <string name="challenge_create">POST CHALLENGE</string>
    <string name="friends_list">Friends List</string>
    <string name="notify_hint">Type a message here to send to all the Athletes subscribed to your challenges</string>
    <string name="search_by_username">Search by Username</string>
    <string name="example_bio">Never gonna give you up, never gonna let you down, never gonna run around and desert you. Never gonna make you cry, never gonna say goodbye, never gonna tell a lie and hurt you.</string>
    <string name="username">UsernameTemp</string>
    <string name="welcome_announcement">Thanks for signing up ForFit! To get started, search for challenges, or find friends!</string>
    <string name="add_friend">Add Friend</string>
    <string name="view_profile">View Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="find_friends">Find Friends</string>
    <string name="friend_search">Friend Search</string>
    <string name="my_friends">My Friends</string>
    <string name="athlete">Athlete User</string>
    <string name="coach">Coach User</string>
    <string name="transparent_button">This button is transparent when rendered</string>
    <string name="challenge_search">Challenge Search</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="name">Name:</string>
    <string name="email_label">Email:</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="gender_label">Gender:</string>
    <string name="age_label">Age:</string>
    <string name="edit_profile_label">Edit Profile:</string>
    <string name="submit_changes_label">Submit Changes:</string>
    <string name="remove_account">Remove Account</string>
    <string name="ranking_system">Ranking System:</string>
    <string name="safetytext">Physical Activity can be strenuous and due to this, you could hurt yourself or possibly die. Exercise caution. We are not responsible.</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="athlete_search">Athlete Search</string>
    <string name="my_challenges">My Challenges</string>
    <string name="lookup_athletes">Find an Athlete</string>
    <string name="home_button">This shortcut button takes the User back to their main activity screen</string>
    <string name="profile_picture_description">A picture the user has uploaded, displayed with a URI link from Firebase</string>
    <string name="search_instruction">Click on an Athlete\'s name to find more about them, and add them as a friend!</string>
    <string name="friends_list_instruction">Click on a Friend to read their bio and view their profile. Find more Friends with the \'Find Friends\" button!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="notify_athletes">Notify Athletes</string>
    <string name="notify_description">This feature allows you to send a notification to Athletes subscribed to challenges you\'ve created.</string>
    <string name="submit">Submit</string>
    <string name="submit_notification">Submit Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="enter">Enter</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="reveal_trophy">Reveal Trophy</string>
    <string name="description_colon">Description:</string>
    <string name="difficulty_colon">Difficulty:</string>
    <string name="five_number">5</string>
    <string name="one_number">1</string>
    <string name="duration_colon">Duration:</string>
    <string name="placeholder">Placeholder</string>
    <string name="excersizes_colon">Exercises:</string>
    <string name="subscribe">Subscribe</string>
    <string name="remove">Remove</string>
    <string name="announcements_colon">Announcements:</string>
    <string name="subscribed_challenges">Subscribed Challenges:</string>
    <string name="min_team_size">Minimum Team Size:</string>
    <string name="max_team_size">Maximum Team Size:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="units">Units</string>
    <string name="exercise_date">Exercise Date</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="teams">Teams</string>
    <string name="random_team">Random Team</string>
    <string name="agree">Agree</string>
    <string name="create_team">Create Team</string>
    <string name="coach_dashboard">Coach Dashboard</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="enter_email">Please enter your registered email ID:</string>
    <string name="send_email">Send Email</string>
    <string name="profile_to_default">Set Profile To Default</string>

</resources>
