<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeLeaderboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrounddark1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonMyProfile"
                    android:layout_width="130dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="buttonMyProfile"
                    android:text="@string/my_profile"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonHome"
                    android:layout_width="101dp"
                    android:layout_height="106dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/transparent_button"
                    android:onClick="buttonHome"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/buttonChallengeSearch"
                    app:layout_constraintStart_toEndOf="@+id/buttonMyProfile"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonChallengeSearch"
                    android:layout_width="130dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/friend_search"
                    android:onClick="buttonChallengeSearch"
                    android:text="@string/challenge_search"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="209dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/leaderboards"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonHome" />

            </android.support.constraint.ConstraintLayout>

            <ListView
                android:id="@+id/L_leaderboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>