<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CoachNotify">

    <ScrollView
        android:id="@+id/CN_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/CN_HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/forfit96"
            android:onClick="CNbuttonHome"
            android:src="@drawable/forfit96"
            app:layout_constraintEnd_toStartOf="@+id/CN_CreateChallengeButton"
            app:layout_constraintStart_toEndOf="@+id/CN_FindAthleteButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/CN_FindAthleteButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="CNbuttonAthleteSearch"
            android:text="@string/lookup_athletes"
            app:layout_constraintBottom_toBottomOf="@+id/CN_HomeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CN_HomeButton" />

        <Button
            android:id="@+id/CN_CreateChallengeButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="CNbuttonCreateChallenge"
            android:text="@string/challenge_title"
            app:layout_constraintBottom_toBottomOf="@+id/CN_HomeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CN_HomeButton" />

        <TextView
            android:id="@+id/CN_TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/notify_athletes"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CN_HomeButton" />

        <EditText
            android:id="@+id/CN_NotifyEditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/notify_hint"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccentAlpha"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CN_TitleTextView" />

        <Button
            android:id="@+id/CN_SubmitButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="CNbuttonSubmitNotification"
            android:text="@string/submit_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CN_NotifyEditTextBox" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>