<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginlogo2"
    tools:context=".AthleteMain">


    <EditText
        android:id="@+id/EmailEntry"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordEntry"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailEntry" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shapeemailpass"
        android:backgroundTint="@color/forFitGreen"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEntry" />

    <Button
        android:id="@+id/CAAbutton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shapeemailpass"
        android:backgroundTint="@color/forFitBlue"
        android:text="@string/register_now"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_forgotpasstxt"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/BCoachTemp"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/shapeemailpass"
        android:text="Coach Temp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BAthleteTemp"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/shapeemailpass"
        android:text="Athlete Temp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/BCoachTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/BCoachTemp"
        app:layout_constraintTop_toTopOf="@+id/BCoachTemp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/log_forgotpasstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_account"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CAAbutton" />

</android.support.constraint.ConstraintLayout>